workloads/openwebui/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openwebui
  namespace: openwebui
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`chat.bapttf.com`)
      kind: Rule
      services:
        - name: openwebui
          port: 8080
  tls:
    secretName: tls-certificate
