workloads/openwebui/openwebui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwebui
  namespace: openwebui
  labels:
    app: openwebui
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - openwebui
  defaultBackend:
    service:
      name: openwebui
      port:
        number: 8080
